--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -9,6 +9,6 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-gradle-plugin:4.1.0-M1'
+    implementation 'org.springframework.boot:spring-boot-gradle-plugin:4.0.2'
     implementation 'io.spring.gradle:dependency-management-plugin:1.1.7'
 }
