--- a/buildSrc/src/main/groovy/buildlogic.java-spring-application-conventions.gradle
+++ b/buildSrc/src/main/groovy/buildlogic.java-spring-application-conventions.gradle
@@ -14,6 +14,7 @@ description = 'The Ubiquiti Java Assessment - Network Deployment Device API with
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
