--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
   application:
     name: network-deployment-service
+  mvc:
+    problemdetails:
+      enabled: true
 
 server:
   port: 8080
